# example-dbms

./: ClientApi.lhs  ClientTest.lhs  LICENSE  Network.lhs  Protocol.lhs  README  SQL.lhs  Server.lhs  ServerApi.lhs  TableValues.lhs  basic_spec  example-dbms.cabal  implementing_queries  project_layout  zakhar.cabal
example-dbms/: .gitignore  ChangeLog.md  README.md  package.yaml
server/: NetworkServer.lhs
src/Database/ExampleDBMS/Network/: ClientApi.lhs  Network.lhs  Protocol.lhs  Server.lhs
src/Database/ExampleDBMS/SQL/: SQL.lhs
src/Database/ExampleDBMS/Server/: ServerApi.lhs
src/Database/ExampleDBMS/Values/: TableValues.lhs
tests/: Tests.lhs
