name:                example-dbms
version:             0.1
synopsis:            Toy/demonstration SQL DBMS
description:         A simple implementation of an SQL DBMS in Haskell. Homepage: <https://github.com/JakeWheat/example-dbms/>.
homepage:            https://github.com/JakeWheat/example-dbms/
license:             BSD3
license-file:        LICENSE
author:              Jake Wheat
maintainer:          jakewheatmail@gmail.com
copyright:           Copyright 2014 Jake Wheat
category:            Database
build-type:          Simple
cabal-version:       >=1.10


-- todo: split into parser, compiler, query engine, dbms, network
-- server, network client libraries or something, as well as the
-- network server exe and the command line client

executable example_dbmsd
  main-is:             Server.lhs
  other-modules:       Network,Protocol,ServerApi
  build-depends:       base >=4.7 && <4.8,
                       binary >=0.7 && <0.8,
                       bytestring >=0.10 && <0.11,
                       derive >= 2.5 && < 2.6,
                       network >= 2.6 && < 2.7
  default-language:    Haskell2010
  ghc-options:         -Wall

executable example_dbms_client
  main-is:             ClientTest.lhs
  other-modules:       Network,Protocol
  build-depends:       base >=4.7 && <4.8,
                       binary >=0.7 && <0.8,
                       bytestring >=0.10 && <0.11,
                       derive >= 2.5 && < 2.6,
                       network >= 2.6 && < 2.7
  default-language:    Haskell2010
  ghc-options:         -Wall
